--- a/app/views/layouts/adm.html.erb
+++ b/app/views/layouts/adm.html.erb
@@ -10,13 +10,13 @@
   </head>
 
   <header>
-    <h1>Header maluco</h1>
+    <h1>Header maluco adm</h1>
   </header>
 
   <body>
     <%= yield %>
   </body>
   <footer>
-    <p>Texto rodapé</p>
+    <p>Texto rodapé adm</p>
   </footer>
 </html>
