--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,3 @@
 <h1>Seja Bem Vindo ao <%= application_name %></h1>
 <p> Hoje é: <%= data_br(Date.today) %></p>
-
-<ul>
-    <li>
-        <%= link_to "Cadastro de moedas", coins_path%>
-    </li>
-</ul>
+<%= render "menu" %> 
