--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :url_image, class:"form-control", placeholder:"http://img.ur/bitcoin.png" %>
   </div>
 
+  <div class="field">
+    <%= form.label :mining_type_id %>
+    <%= form.select("mining_type_id", @mining_type_options, { include_blank: 'Selecione...' }, class:"form-control") %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
