--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Crypto Wallet</title>
+    <title>CrypoWallet</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
+   
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <header>
-    <h1>Header maluco</h1>
-  </header>
-
   <body>
-    <%= yield %>
+    <div class="container-fluid">
+      <ul class="nav justify-content-end">
+        <li>
+          <%= link_to '[HOME]', root_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Português', root_path(locale: 'pt-BR'), class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'English', root_path(locale: 'en'), class:"nav-link" %>
+        </li>
+      </ul>
+      <%= yield %>
+    </div>
   </body>
-  <footer>
-    <p>Texto rodapé</p>
-  </footer>
+  <script>
+    $.notify("Hello World", "success");
+  </script>
 </html>
